# cozy-nm

./: .dockerignore  .gitignore  .know-your-tmux.yml  Dockerfile  README.md  alembic.ini  config.example.yml  deploy.py  docker-compose.minion.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_device_inventory.py  0003_widen_device_counters.py
cozy_network_manager/: __init__.py
cozy_network_manager/app/: config.py  main.py  schemas.py
cozy_network_manager/app/api/: head.py  minion.py
cozy_network_manager/app/collectors/: docker.py  host.py  snapshot.py  socat.py  wireguard.py
cozy_network_manager/app/db/: init_db.py  models.py  session.py
cozy_network_manager/app/services/: devices.py  dns.py  nodes.py  poller.py
cozy_network_manager/app/static/: style.css
cozy_network_manager/app/templates/: base.html  dashboard.html  dns.html  forwards.html  node_detail.html  nodes.html  warnings.html
cozy_network_manager/app/ui/: templates.py
tests/: test_config.py  test_devices.py  test_dns.py  test_minion_api.py  test_public_ip.py  test_snapshot_schema.py  test_socat.py  test_wireguard.py
