[tool.poetry]
name = "cozy-network-manager"
version = "0.1.0"
description = "Self-hosted WireGuard VPN network inspection dashboard"
authors = ["Cozy Network Manager"]
readme = "README.md"
packages = [{ include = "cozy_network_manager" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg = { extras = ["binary"], version = "^3.2.3" }
pydantic = "^2.10.0"
pydantic-settings = "^2.6.1"
pyyaml = "^6.0.2"
httpx = "^0.28.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.17"
dnspython = "^2.7.0"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

